// calculator.proto
syntax = "proto3";

package calculator;
option go_package = "./proto";

service Calculator {
    rpc Add (AddRequest) returns (AddResponse);
    rpc StreamAdd(stream StreamNumList) returns (AddResponse);
    rpc AddStream(NumList) returns (stream StreamAddResponse);
    rpc Bi_Add(stream StreamNumList) returns (stream StreamAddResponse);
}

// Add
message AddRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

// Add, StreamAdd
message AddResponse {
    int32 result = 1;
}

// StreamAdd
message StreamNumList {
    int32 nums = 1;
}

// AddStream
message NumList {
    repeated int32 nums = 1;
}

// AddStream
message StreamAddResponse {
    int32 result = 1;
}